Page MenuHome GnuPG

GnuPG dependency of libgpg-error and GPG_ERR_WRONG_NAME
Closed, ResolvedPublic

Description

gnupg-2.2.18 to gnupg-2.2.20 require gpgerror >= 1.24

However, since d9c79351 / 3efc94f1 (release 2.2.18), it uses GPG_ERR_WRONG_NAME, which was added in libgpg-error 1.27

It needs either a version requisite version bump or to define it itself, like ntbtls does.

Event Timeline

werner claimed this task.
werner added a subscriber: werner.

I bumped up the requirement to 1.25 because we also use error codes defined there. To be on the safe side with older distros I defined the missing error code instead of requiring 1.27.